# collect

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  env.local  manage.py  pyproject.toml
accounts/: forms.py  views.py
collect/: asgi.py  context_processors.py  settings.py  urls.py  utils.py  wsgi.py
collectable/: admin.py  apps.py  forms.py  models.py  urls.py  validators.py  views.py
collectable/management/commands/: loadfolder.py
collectable/migrations/: 0001_initial.py  0002_alter_collectable_options_and_more.py  0002_uuidtaggeditem_collectable_tags.py  0003_alter_collectable_photo_and_more.py  0003_collectable_description_and_more.py  0004_alter_collectable_description_and_more.py  0005_collectable__computed_tags_and_more.py
collectable/templates/collectable/: by_tags.html  collectable_list.html  collectable_thumbnail.html  collection.html  create.html  details.html  index.html  possession_form.html  profile.html
collectable/templatetags/: collectable_extras.py
locale/en/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
static/css/: style.css
templates/: base.html  paginator.html
templates/registration/: login.html  signup.html
